gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Account__c.field-meta.xml
<CustomField>
    <fullName>LTX_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>