gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Final_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>LTX_Final_Interest_Rate__c</fullName>
    <label>Final Interest Rate (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>