gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Loan_Terms_Years__c.field-meta.xml
<CustomField>
    <fullName>LTX_Loan_Terms_Years__c</fullName>
    <label>Loan Terms(Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>