gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Product__c.field-meta.xml
<CustomField>
    <fullName>LTX_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>