gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>LTX_Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Long Term Loan</fullName>
            </value>
            <value>
                <fullName>Short Term Loan</fullName>
            </value>
            <value>
                <fullName>Business Loan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>