gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Repayment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LTX_Repayment_Frequency__c</fullName>
    <label>Repayment Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>