gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Repayment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>LTX_Repayment_Start_Date__c</fullName>
    <label>Repayment Start Date</label>
    <type>Date</type>
</CustomField>