gts/GenericTabset Builder/main/default/objects/LTX_Application__c/fields/LTX_Score__c.field-meta.xml
<CustomField>
    <fullName>LTX_Score__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>